// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventStartDateFilter > renders with selection: a date range 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3 css-dev-only-do-not-override-mncuj7"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between css-dev-only-do-not-override-mncuj7"
        type="flex"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <h3
            class="pb1 fw4 mt0 mb2"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
        />
      </div>
      <div
        class="ant-row w-100 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <div
            class="ant-row ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="false"
                class="ant-switch css-dev-only-do-not-override-mncuj7"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              From:
            </div>
            <div
              class="ant-row mb2 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    size="12"
                    value="2019-05-05"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              To:
            </div>
            <div
              class="ant-row css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    size="12"
                    value="2020-01-01"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EventStartDateFilter > renders with selection: all 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3 css-dev-only-do-not-override-mncuj7"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between css-dev-only-do-not-override-mncuj7"
        type="flex"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <h3
            class="pb1 fw4 mt0 mb2"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
        />
      </div>
      <div
        class="ant-row w-100 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <div
            class="ant-row ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="false"
                class="ant-switch css-dev-only-do-not-override-mncuj7"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              From:
            </div>
            <div
              class="ant-row mb2 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    size="12"
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              To:
            </div>
            <div
              class="ant-row css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    size="12"
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EventStartDateFilter > renders with selection: upcoming 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3 css-dev-only-do-not-override-mncuj7"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between css-dev-only-do-not-override-mncuj7"
        type="flex"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <h3
            class="pb1 fw4 mt0 mb2"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
        />
      </div>
      <div
        class="ant-row w-100 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <div
            class="ant-row ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="true"
                class="ant-switch css-dev-only-do-not-override-mncuj7 ant-switch-checked"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              From:
            </div>
            <div
              class="ant-row mb2 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    size="12"
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              To:
            </div>
            <div
              class="ant-row css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    size="12"
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EventStartDateFilter > renders without selection 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3 css-dev-only-do-not-override-mncuj7"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between css-dev-only-do-not-override-mncuj7"
        type="flex"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <h3
            class="pb1 fw4 mt0 mb2"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
        />
      </div>
      <div
        class="ant-row w-100 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-col css-dev-only-do-not-override-mncuj7"
          style="flex: 1 1 auto;"
        >
          <div
            class="ant-row ant-row-middle mb3 css-dev-only-do-not-override-mncuj7"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="false"
                class="ant-switch css-dev-only-do-not-override-mncuj7"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                >
                  <span
                    class="ant-switch-inner-checked"
                  />
                  <span
                    class="ant-switch-inner-unchecked"
                  />
                </span>
              </button>
            </div>
            <div
              class="ant-col css-dev-only-do-not-override-mncuj7"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              From:
            </div>
            <div
              class="ant-row mb2 css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    size="12"
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1 css-dev-only-do-not-override-mncuj7"
            >
              To:
            </div>
            <div
              class="ant-row css-dev-only-do-not-override-mncuj7"
            >
              <div
                class="ant-picker ant-picker-outlined css-dev-only-do-not-override-mncuj7 w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    size="12"
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
